Grid Alignment Fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,6 +177,8 @@ ul {
 .destination-section .img-container {
     display: grid;
     gap: 24px;
+    justify-content:center;
+    align-items:center;
     grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
@@ -351,7 +353,8 @@ footer .footer-icons {
         height: 52px;
         text-align: center;
     }
-
+    
+    /* Popular Tour Section  */
     .popular-tours-main {
         flex-direction: column;
         gap: 24px;
@@ -385,6 +388,7 @@ footer .footer-icons {
         width: 100%;
     }
 
+
     /* Choose Your Destination Section */
     .destination-section {
         margin: 15px 15px;
@@ -395,22 +399,21 @@ footer .footer-icons {
         font-size: 24px;
         padding-bottom: 16px;
     }
-
     .destination-section>p {
         font-size: 14px;
 
     }
-
     .destination-section .img-container {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(7,1fr);
+        padding-left: 15px;
+        /* justify-content: center; */
 
     }
     .destination-section .img-container p {
         padding-top: 90px;
 
     }
-
     .grid-item-1 {
         grid-column: 1/span 1;
         grid-row: 1/span 1;
